--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -760,5 +760,9 @@
     <string name="hardware_keys_single_tap_title">Single tap action</string>
     <string name="hardware_keys_long_press_title">Long press action</string>
     <string name="hardware_keys_double_tap_title">Double tap action</string>
+
+    <!-- Hardware keys -->
+    <string name="hardware_keys_category">Hardware navigation buttons</string>
+    <string name="hardware_keys_disable_title">Disable hardware buttons</string>
 </resources>
 
