--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -688,5 +688,9 @@
     <!-- QS Category -->
     <string name="qs_header_category">QS Header</string>
     <string name="qs_footer_category">QS Footer</string>
+
+    <!-- Notch: Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Ignore notch space for selected applications</string>
 </resources>
 
