--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,19 @@
     <string name="maintainer_title">Maintainer</string>
     <string name="contributor_title">Contributor</string>
 
+    <!-- Battery light -->
+    <string name="light_settings_header">Light settings</string>
+    <string name="battery_light_settings">Battery charging light</string>
+    <string name="battery_light_summary">Enable or disable Battery light while on DND, low battery</string>
+    <string name="battery_light_enable">Battery light</string>
+    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
+    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
+    <string name="battery_light_cat">Battery light color when charging</string>
+    <string name="battery_light_low_color">Low battery</string>
+    <string name="battery_light_medium_color">Medium battery</string>
+    <string name="battery_light_full_color">Almost full battery</string>
+    <string name="battery_light_reallyfull_color">Full (100) battery</string>
+
     <!-- Bottom navigation -->
     <string name="navigation_system_title">System</string>
     <string name="navigation_lockscreen_title">Lockscreen</string>
