--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -793,7 +793,7 @@
     <string name="network_traffic_state_title">Network traffic</string>
     <string name="network_traffic_state_summary">Show net activity in statusbar</string>
     <string name="network_traffic">Network traffic</string>
-    <string name="network_traffic_location">Show net activity</string>
+    <string name="network_traffic_location">Traffic indicator placement</string>
     <string name="traffic_disabled">Disabled</string>
     <string name="traffic_statusbar">Statusbar</string>
     <string name="traffic_expanded_statusbar">Expanded header</string>
@@ -803,6 +803,6 @@
     <string name="network_traffic_type">Select net activity type</string>
     <string name="show_network_traffic_up">Upload</string>
     <string name="show_network_traffic_down">Download</string>
-    <string name="show_network_traffic_all">Upload and Download</string>
+    <string name="show_network_traffic_all">Both</string>
 </resources>
 
