--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -814,5 +814,8 @@
 
     <!-- QS Header clock style -->
     <string name="qs_clock_toggle">Switch QS Header clock style</string>
+
+    <!-- QS panel opacity -->
+    <string name="qs_panel_alpha_title">QS Panel opacity</string>
 </resources>
 
