Theme settings dashboard icons [3/3]
Change-Id: Ie2692e3ae7159a2841b406d090b54f9af3bfa825

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -406,5 +406,13 @@
     <!-- Center R Notification headers -->
     <string name="center_notification_headers_title">Center notification headers</string>
     <string name="center_notification_headers_summary">Whether to Center R style notification headers (Requires a SystemUI restart)</string>
+
+    <!-- Settings dashboard icon style -->
+    <string name="dashboard_stuff">Dashboard Settings</string>
+    <string name="theming_settings_dashboard_icons_title">Settings dashboard icons</string>
+    <string name="theming_settings_dashboard_icons_default2">Default background</string>
+    <string name="theming_settings_dashboard_icons_default_accent2">Accent background</string>
+    <string name="theming_settings_dashboard_icons_plain">Plain</string>
+    <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
 </resources>
 
