--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -647,5 +647,9 @@
     <string name="qs_brightness_slider_hide">Hide</string>
     <string name="qs_brightness_slider_bottom">Bottom</string>
     <string name="qs_brightness_slider_top">Top</string>
+
+    <!-- StatusBar notification count -->
+    <string name="notif_count_title">Notification count</string>
+    <string name="notif_count_summary">Show notification count near notfication icons</string>
 </resources>
 
