--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -371,7 +371,8 @@
 
     <!-- Statusbar Clock Font Style, Size & Color -->
     <string name="status_bar_clock_font_style_title">Clock font style</string>
-    <string name="status_bar_clock_font_size_title">Clock font size</string>
+    <string name="status_bar_clock_font_size_title">Statusbar Clock font size</string>
+    <string name="qs_clock_font_size_title">QS Header Clock font size</string>
     <string name="status_bar_clock_color_title">Clock font color</string>
     <string name="clock_date_right">Right of time</string>
     <string name="clock_date_left">Left of time</string>
