--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -786,5 +786,12 @@
     <!-- QS Status icons background -->
     <string name="qs_status_background_title">QS Status icons background</string>
     <string name="qs_status_background_summary">Toggle status icon background in QS Panel (requires SystemUI reboot)</string>
+
+    <!-- Statusbar net monitor -->
+    <string name="traffic_title">Traffic indicators</string>
+    <string name="traffic_summary">Show current network traffic levels in the status bar</string>
+    <string name="network_traffic_state_title">Network traffic</string>
+    <string name="network_traffic_state_summary">Show net activity in statusbar</string>
+    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
 </resources>
 
