--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,6 +113,9 @@
     <!-- Lock screen cover art -->
     <string name="lockscreen_media_category">Music/Media</string>
 
+    <string name="lockscreen_lock_icon_title">Lock icon</string>
+    <string name="lockscreen_lock_icon_summary">Display lock icon on the lockscreen</string>
+
     <!-- Old Mobile Type Icons -->
     <string name="use_old_mobiletype_title">Old mobiletype</string>
     <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (Reboot required)</string>
