RavenLair: configure lock screen media artwork blur level [2/2]
Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: Iafbead1cf5476ebc1e9f681bbd2b5dcef72e75de

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -153,5 +153,8 @@
     <string name="lockscreen_media_art_title">Media Art</string>
     <string name="lockscreen_media_art_summary">Toggle visibility of media art</string>
 
+    <!-- Lock screen media blur -->
+    <string name="lockscreen_media_blur_title">Media artwork blur level</string>
+
 </resources>
 
