--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -190,5 +190,9 @@
     <string name="incall_vibrate_connect_title">Vibrate on Connect</string>
     <string name="incall_vibrate_call_wait_title">Vibrate on Call Waiting</string>
     <string name="incall_vibrate_disconnect_title">Vibrate on Disconnect</string>
+
+    <!-- QuickSettings haptic feedback -->
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
 </resources>
 
