--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -242,5 +242,9 @@
     <string name="status_bar_battery_text_position_right">Right of the icon</string>
     <string name="status_bar_battery_text_charging_title">Battery percentage when charging</string>
     <string name="status_bar_battery_text_charging_summary">Always display battery percentage when charging</string>
+
+    <!-- VoLTE switch -->
+    <string name="volte_switch_title">VoLTE icon</string>
+    <string name="volte_switch_summary">Display VoLTE icon</string>
 </resources>
 
