RavenLair : Allow hiding notification headers [2/2]
Gimme back my space, thank you

Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>
Signed-off-by: ashwatthama <sai404142@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -399,5 +399,8 @@
     <string name="qs_datausage_daily">Daily usage</string>
     <string name="qs_datausage_monthly">Monthly usage</string>
 
+    <!-- Notification headers -->
+    <string name="notification_headers_title">Notification Headers</string>
+    <string name="notification_headers_summary">Show headers in the notification shade\nRequires a SystemUI restart</string>
 </resources>
 
