--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -203,6 +203,7 @@
     <string name="lockscreen_visualizer_enable_summary">Show visualizer bars while playing music</string>
 
 
+
     <!-- Incall vibrate options -->
     <string name="incall_vibration_category">In-call Vibration</string>
     <string name="incall_vibrate_connect_title">Vibrate on Connect</string>
@@ -291,6 +292,13 @@
     <string name="vowifi_icon_simple1">Simple1 Icon</string>
     <string name="vowifi_icon_simple2">Simple2 Icon</string>
     <string name="vowifi_icon_simple3">Simple3 Icon</string>
+
+    <!-- Brightness slider -->
+    <string name="qs_show_brightness_title">Brightness slider</string>
+    <string name="qs_show_brightness_summary">Brightness slider visability and settings</string>
+    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
+    <string name="qs_brightness_position_bottom_summary">Show the brightness slider on the bottom of QS</string>
+
 
 </resources>
 
