--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -301,7 +301,13 @@
     <string name="qs_show_brightness_above_footer_title">Above footer</string>
     <string name="qs_show_brightness_above_footer_summary">Show bottom brightness slider above QS footer</string>
     <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
+
     <string name="qs_show_auto_brightness_summary">Show an auto brightness toggle near the brightness slider</string>
+
+    <!-- QS media player -->
+    <string name="qs_media_player_title">Media player</string>
+    <string name="qs_media_player_summary_on">Show media player in QS\nRequires a SystemUI restart</string>
+    <string name="qs_media_player_summary_off">Show media player as a notification\nRequires a SystemUI restart</string>
     
 </resources>
 
