Lair: Recognizing fingerprint animation [2/2]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Change-Id: Ic4f2b2a965a5d34a9a57503c030bc8e97d2426b4

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -411,5 +411,12 @@
     <string name="theming_settings_dashboard_icons_default_accent2">Accent background</string>
     <string name="theming_settings_dashboard_icons_plain">Plain</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
+
+    <!-- FOD icon picker -->
+    <string name="fod_icon_picker_category_title">FOD settings</string>
+
+    <!-- FOD animations -->
+    <string name="fod_recog_animation">Fingerprint animation</string>
+    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
 </resources>
 
