--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,6 +61,7 @@
     <string name="lockscreen_items_title">Lockscreen items</string>
     <string name="lockscreen_items_summary">Customize the lockscreen</string>
     <string name="switch_settings_title">Misc lockscreen settings</string>
+    <string name="fingerprint_title">Fingerprint Settings</string>
 
     <!-- Statusbar -->
     <string name="battery_options_title">Battery options</string>
@@ -205,8 +206,6 @@
     <string name="lockscreen_visualizer_title">Visualizer</string>
     <string name="lockscreen_visualizer_enable">Music Visualizer</string>
     <string name="lockscreen_visualizer_enable_summary">Show visualizer bars while playing music</string>
-
-
 
     <!-- Incall vibrate options -->
     <string name="incall_vibration_category">In-call Vibration</string>
