RavenLair: Add quick settings pull down with one finger [2/2]
Change-Id: I4508bc597b69608a841746d09c5e25ccf1fd2725

Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: Id6ca44471206df038fe615acf45cd960a1937e2e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -421,5 +421,12 @@
     <string name="torch_long_press_power_timeout_2min">2 minutes</string>
     <string name="torch_long_press_power_timeout_5min">5 minutes</string>
     <string name="torch_long_press_power_timeout_10min">10 minutes</string>
+
+    <!-- QS advanced settings -->
+    <string name="qs_column_rows_settings_title">QS panel settings</string>
+    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
+    <string name="quick_pulldown_none">Disabled</string>
+    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
+    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
 </resources>
 
