--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -140,6 +140,10 @@
     <string name="double_tap_sleep_gesture_title">Double tap to sleep on statusbar</string>
     <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
 
+    <!-- Double Tap on Doze to wake -->
+    <string name="double_tap_on_doze_to_wake_title">Double-tap to wake on doze</string>
+    <string name="double_tap_on_doze_to_wake_summary">Double tap to wake when device is dreaming</string>
+  
     <!-- Volume Waker -->
     <string name="volume_stuff_title">Volume Button</string>
     <string name="volume_rocker_wake_title">Wake device</string>
