RavenLair: Allow customizing footer text [2/2]
Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: I008907bd8cb2972a209889772012dcd0bd587a1a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -449,6 +449,11 @@
     <string name="qs_datausage_daily">Daily usage</string>
     <string name="qs_datausage_monthly">Monthly usage</string>
 
+    <!-- QS footer text -->
+    <string name="qs_footer_text_show_title">Show QS footer text</string>
+    <string name="qs_footer_text_string_title">Customize footer text</string>
+
+
     <!-- Notification headers -->
     <string name="notification_headers_title">Notification Headers</string>
     <string name="notification_headers_summary">Show headers in the notification shade\nRequires a SystemUI restart</string>
