RavenLair: Running services icon toggle [2/2]
Change-Id: Id700ad1ec8b20d048b5faf0cd08749044e2d7c34
Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>
Signed-off-by: Zaviyar786 <beingme639@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -491,5 +491,9 @@
     <string name="ringtone_focus_mode_title">Where to play ringtones from</string>
     <string name="ringtone_focus_mode_dynamic">From headset if connected and playing music</string>
     <string name="ringtone_focus_mode_stock">"From speakerphone (AOSP default)"</string>
+
+    <!-- QS footer icons -->
+    <string name="qs_running_services_title">Running Services Icon</string>
+    <string name="qs_running_services_summary">Enable the running services icon in the footer</string>
 </resources>
 
