--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -465,8 +465,10 @@
     <!-- NavBar IME arrows -->
     <string name="navigation_bar_arrow_keys_title">IME arrows</string>
     <string name="navigation_bar_arrow_keys_summary">Show arrow keys on navbar while typing</string>
- 
- 
+
+    <!-- NavBar Inverse -->
+    <string name="navigation_bar_inverse_title">Inverse layout</string>
+  
     <!-- Center R Notification headers -->
     <string name="center_notification_headers_title">Center notification headers</string>
     <string name="center_notification_headers_summary">Whether to Center R style notification headers (Requires a SystemUI restart)</string>
