RavenLair: Disable custom navbar layout switches when using gestural
Signed-off-by: Zaviyar786 <beingme639@gmail.com>
Change-Id: Iad8814f39f07c1147da9f77731019b3e3ae0b4b7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -474,6 +474,8 @@
     <string name="navbar_layout_leftleaning">Left-leaning</string>
     <string name="navbar_layout_rightleaning">Right-leaning</string>
     <string name="navigation_bar_inverse_title">Inverse layout</string>
+    <string name="navbar_gesture_enabled">Not available when using gestural navigation</string>
+
   
     <!-- Center R Notification headers -->
     <string name="center_notification_headers_title">Center notification headers</string>
