RavenLair: Update the team
Change-Id: I36672c0fd51061cb0b07ed669410682a4c95d2c6

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,10 @@
 
     <!-- The Team -->
     <string name="dialog_team_title">The team</string>
+    <string name="lead_developer_title">Lead Developer</string>
+    <string name="manager_title">Project Manager</string>
+    <string name="core_developer_title">Core Developer</string>
+    <string name="ui_developer_title">UI/UX Developer</string>
     <string name="developer_title">Developer</string>
     <string name="maintainer_title">Maintainer</string>
     <string name="contributor_title">Contributor</string>
