--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -553,5 +553,9 @@
     <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
 
     <string name="radio_info_title">Radio info</string>
+
+    <!-- Doze on charge -->
+    <string name="doze_on_charge_title">Always on when charging</string>
+    <string name="doze_on_charge_summary">Show doze screen all the time when charging</string>
 </resources>
 
