--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -551,5 +551,7 @@
     <!-- Launch music player when headset is connected -->
     <string name="headset_connect_player_title">Launch music app on headset connection</string>
     <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
+
+    <string name="radio_info_title">Radio info</string>
 </resources>
 
