Lair: Volume key music control [2/2]
Change-Id: I3d42b5f01481a7dfec6e00f15194717ff6d2fc5c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,7 +16,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Dirty Tweaks -->
+    <!-- Raven Lair -->
     <string name="ravenlair_title">Raven\'s Lair</string>
     <string name="ravenlair_summary">Unleash the Raven</string>
 
