--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -199,8 +199,8 @@
     <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (Reboot required)</string>
 
     <!-- QS themes -->
-    <string name="qs_bg_use_new_tint">QS Tint</string>
-    <string name="qs_bg_use_new_tint_summary">Enable QS tiles tint style (Requires Reboot)</string>
+    <string name="qs_bg_use_new_tint">Android S QS Tint</string>
+    <string name="qs_bg_use_new_tint_summary">Toggle between QS tiles tint style</string>
 
     <!-- 4G icon -->
     <string name="show_fourg_icon_title">4G icon</string>
