--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -682,5 +682,11 @@
     <!-- Lockscreen blur -->
     <string name="lockscreen_blur_title">Background blur</string>
     <string name="lockscreen_blur_disabled">Lock screen Blur cannot be enabled if your lock screen wallpaper does not match your home screen, or your device does not support Blur.</string>
+
+    <!-- reTicker -->
+    <string name="reticker_title">reTicker</string>
+    <string name="reticker_summary">Replace your notifications with a redesigned version of tickers! \nSlim and less invasive than a standard notification</string>
+    <string name="reticker_colored_title">Use app colored background</string>
+    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
 </resources>
 
