--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -817,5 +817,8 @@
 
     <!-- QS panel opacity -->
     <string name="qs_panel_alpha_title">QS Panel opacity</string>
+
+    <!-- Notification background opacity -->
+    <string name="notification_alpha_title">Notification background alpha</string>
 </resources>
 
