Replace media notification background with artwork [2/2]
Change-Id: I01eadb5b236015c6d311b77bdb5e1fd0ea434695

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -650,5 +650,10 @@
     <!-- StatusBar notification count -->
     <string name="notif_count_title">Notification count</string>
     <string name="notif_count_summary">Show notification count near notfication icons</string>
+
+    <!-- Notification Media Options -->
+    <string name="media_category">QS Media options</string>
+    <string name="artwork_media_background_title">Artwork media background</string>
+    <string name="artwork_media_background_summary">Set media artwork as notification media background</string>
 </resources>
 
