Add lockscreen background blur [2/2]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I26dce67e7d98b577a5c2d7ea4a1bf0e17c4f2596

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -678,5 +678,8 @@
     <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
     <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
     <string name="unit_percent">\u0025</string>
+
+    <!-- Lockscreen blur -->
+    <string name="lockscreen_blur_title">Background blur</string>
 </resources>
 
