Explain to the user why LS Blur is disabled
Change-Id: I660b4a69bbe70e6f1c54bc02ce64d0db5805721e
Signed-off-by: Ayan Mukherjee <mukherjeeayan725@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -681,5 +681,6 @@
 
     <!-- Lockscreen blur -->
     <string name="lockscreen_blur_title">Background blur</string>
+    <string name="lockscreen_blur_disabled">Lock screen Blur cannot be enabled if your lock screen wallpaper does not match your home screen, or your device does not support Blur.</string>
 </resources>
 
