--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -828,6 +828,7 @@
     <string name="volume_panel_oreo">Oreo</string>
     <string name="volume_panel_tiled">Tiled</string>
     <string name="volume_panel_miui">MIUI Compact</string>
+    <string name="volume_panel_oos">OOS</string>
 
     <!-- Volume Panel Plugin Values -->
     <string name="volume_panel_aosp_val">co.potatoproject.plugin.volume.aosp</string>
@@ -835,5 +836,6 @@
     <string name="volume_panel_oreo_val">co.potatoproject.plugin.volume.oreo</string>
     <string name="volume_panel_tiled_val">co.potatoproject.plugin.volume.tiled</string>
     <string name="volume_panel_miui_val" translatable="false">co.potatoproject.plugin.volume.miui</string>
+    <string name="volume_panel_oos_val" translatable="false">co.potatoproject.plugin.volume.oos</string>
 </resources>
 
