--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -829,6 +829,7 @@
     <string name="volume_panel_tiled">Tiled</string>
     <string name="volume_panel_miui">MIUI Compact</string>
     <string name="volume_panel_oos">OOS</string>
+    <string name="volume_panel_p404">P404</string>
 
     <!-- Volume Panel Plugin Values -->
     <string name="volume_panel_aosp_val">co.potatoproject.plugin.volume.aosp</string>
@@ -837,5 +838,6 @@
     <string name="volume_panel_tiled_val">co.potatoproject.plugin.volume.tiled</string>
     <string name="volume_panel_miui_val" translatable="false">co.potatoproject.plugin.volume.miui</string>
     <string name="volume_panel_oos_val" translatable="false">co.potatoproject.plugin.volume.oos</string>
+    <string name="volume_panel_p404_val" translatable="false">co.potatoproject.plugin.volume.p404</string>
 </resources>
 
