--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -713,5 +713,9 @@
     <!-- StatusBar notification count -->
     <string name="notif_count_title">Notification count</string>
     <string name="notif_count_summary">Show notification count near notfication icons</string>
+
+    <!-- Colored Statusbar Icons -->
+    <string name="statusbar_icons_style">Colored Statusbar Icons</string>
+    <string name="statusbar_icons_style_summary">Choose the style of your statusbar icons (requires SystemUI reboot)</string>
 </resources>
 
