Dashboard Icons: Add new MD2 Style
Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>
Change-Id: I2c65a71eb550219ee813c36a29f61607bf947514

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -473,6 +473,8 @@
     <string name="theming_settings_dashboard_icons_default_accent2">Accent background</string>
     <string name="theming_settings_dashboard_icons_plain">Plain</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Plain accent</string>
+    <string name="theming_settings_dashboard_icons_corvusify">Color Corvusify</string>
+    <string name="theming_settings_dashboard_icons_material">Material Design 2</string>
 
     <!--FOD icons -->
     <string name="fod_icon_picker_category_title">FOD customization options</string>
