QS status icons background toggle [2/2]
Signed-off-by: Trishiraj <gamerprince.exp@gmail.com>
Change-Id: I9be3c14dca3de6df451b15454c61415fbdd58206

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -783,5 +783,8 @@
     <string name="statusbar_icons_style">Colored Statusbar Icons</string>
     <string name="statusbar_icons_style_summary">Choose the style of your statusbar icons (requires SystemUI reboot)</string>
 
+    <!-- QS Status icons background -->
+    <string name="qs_status_background_title">QS Status icons background</string>
+    <string name="qs_status_background_summary">Toggle status icon background in QS Panel (requires SystemUI reboot)</string>
 </resources>
 
